--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -4,7 +4,6 @@
 body{
   width: 100%;
   margin: 0 auto;
-  background: #aa198d;
   font-family: "HelveticaNeueLTStd Lt", arial, sans-serif;
   overflow-x: hidden !important;
 }
@@ -115,11 +114,9 @@ body{
 
 .header{
   width: 100%;
-  background: #aa198d;
   margin: 0 auto;
   .logo{
     width: 20%;
-    padding: 10px;
     display: inline-block;
   }
 
@@ -164,7 +161,6 @@ body{
 }
 
 .content{
-  background: #aa198d;
   color: #fff;
   .info-thank{
     text-align: center;
@@ -195,8 +191,33 @@ body{
     }
 
   }
+
+  .slide_show{
+    max-width: 100%;
+    margin: 0 auto;
+    ul{
+      list-style: none;
+    }
+  }
+
+  .our_center{
+    color: #000000;
+    #text{
+      text-align: center;
+      h3{
+        font-family: "Bebas Neue", arial, sans-serif;
+        font-size: 53px;
+      }
+    }
+    #list{
+      width: 500px;
+      margin: 0 auto;
+    }
+  }
+
   .content-form{
     margin-top: 110px;
+    background: #aa198d;
     .footer-form{
       margin-top: 42px;
       ul{
@@ -204,7 +225,6 @@ body{
           padding-top: 10px;
         }
         list-style: none;
-        padding: 0;
         .icon{
           width: 9%;
           display: inline-block;
