--- a/app/Resources/views/desktop/index.html.twig
+++ b/app/Resources/views/desktop/index.html.twig
@@ -3,13 +3,10 @@
 {% block content %}
     <div class="content">
         <div class="wrapper-content">
-            <div class="info">
-                <h1>Perdonad las molestias</h1>
-                <h3>web en construcci&oacute;n<br>
-                <span>Nuestro programador ha ido a por tabaco</span></h3>
-            </div>
-            {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
+            {% include ':desktop:_slider_show.html.twig' %}
+            {% include ':desktop:_our_center.html.twig' %}
 
         </div>
+        {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
     </div>
 {% endblock %}
