--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -13,6 +13,9 @@
         <link href="{{ asset('sboza2/css/styles.css') }}" rel="stylesheet" />
         <link href="{{ asset('sboza2/css/responsive.css') }}" rel="stylesheet" />
         <script src="{{ asset('sboza2/js/jquery-3.1.0.min.js') }}"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+        <script src="{{ asset('sboza2/js/jquery.bxslider.min.js') }}"></script>
+        <link href="{{ asset('sboza2/css/jquery.bxslider.min.css') }}"/>
 
     </head>
     <body>
@@ -24,6 +27,11 @@
             {% include ':desktop:_footer.html.twig' %}
         {% endblock %}
         {% block javascripts %}
+            <script>
+                $(document).ready(function(){
+                    $('.bxslider').bxSlider();
+                });
+            </script>
             <script>
                 document.getElementById('hamburgler').addEventListener('click', checkNav);
                 window.addEventListener("keyup", function(e) {
