created menu and header responsive

--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -166,6 +166,15 @@ body{
 .content{
   background: #aa198d;
   color: #fff;
+
+  .slide_show{
+    max-width: 100%;
+    margin: 0 auto;
+    ul{
+      list-style: none;
+    }
+  }
+
   .info-thank{
     text-align: center;
     font-family: "Bebas Neue", arial, sans-serif;
