--- a/app/Resources/views/desktop/_slide_show.html.twig
+++ b/app/Resources/views/desktop/_slide_show.html.twig
@@ -1,4 +1,4 @@
-<div class="slide">
+<div class="slide_show">
     <div class="wrapper-content">
         <ul class="bxslider">
             <li><img src="{{ asset('sboza2/img/slide-show/Banner-1.png') }}" /></li>
