--- a/app/Resources/css/1024.less
+++ b/app/Resources/css/1024.less
@@ -6,6 +6,11 @@
     overflow-x: hidden !important;
   }
 
+  .wrapper-content-slide{
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
+
   .header-top{
     height: 100%;
     .info-header{
@@ -25,6 +30,7 @@
   }
 }
 
+/*
 @media only screen and (min-width: 1300px) {
 
   .footer{
@@ -32,4 +38,4 @@
     height: 600px;
 
   }
-}
+}*/
