--- a/app/Resources/css/320.less
+++ b/app/Resources/css/320.less
@@ -9,20 +9,13 @@
 
   .content {
     .content-form {
-      .footer-form{
-        ul{
-          .icon{
-            width: 9%;
-            img{
-              width: 24px;
-            }
-          }
-          .text{
-            width: 85%;
+      .form {
+        .header-form {
+          .wrapper-header-form {
+            width: 100%;
+            max-width: 322px;
           }
         }
-      }
-      .form {
         .wrapper-form {
           width: 100%;
           max-width: 300px;
