--- a/app/Resources/views/desktop/_header_top.html.twig
+++ b/app/Resources/views/desktop/_header_top.html.twig
@@ -3,12 +3,10 @@
         <div class="info-header">
             <a class="link-email" href="mailto:info@sboza2.com">info@sboza2.com</a>
                 <span>
-                    <img src="{{ asset('sboza2/img/icons/Icono-2-05.png') }}"><img src="{{ asset('sboza2/img/icons/Icono 2-04.svg') }}"> pidenos más informaci&oacute;n <a href="tel:+34669970256"><span class="phone">669 970 256</span></a>
+                    <img src="{{ asset('sboza2/img/icons/Icono 2-05.svg') }}"><img src="{{ asset('sboza2/img/icons/Icono 2-04.svg') }}"> pidenos más informaci&oacute;n <a href="tel:+34669970256"><span class="phone">669 970 256</span></a>
                 </span>
         </div>
         <div class="social-header">
-            <span class="date">{{ date }}</span>
-            <a class="campus-header" href="#">campus</a>
             {% include ':desktop:_social_networks.html.twig' %}
         </div>
     </div>
