--- a/app/Resources/views/desktop/_header_top_mobile.html.twig
+++ b/app/Resources/views/desktop/_header_top_mobile.html.twig
@@ -2,9 +2,7 @@
     <div class="wrapper-content">
         <div class="header-top-content">
             <i id="email-mobile" class="fa fa-envelope" aria-hidden="true"></i>
-            <i id="phone-mobile" class="fa fa-phone" aria-hidden="true"></i>
-            <i id="date-mobile" class="fa fa-calendar" aria-hidden="true"></i>
-            <a class="campus-header" href="#">campus</a>
+            <span id="phone-mobile"><img src="{{ asset('sboza2/img/icons/Icono 2-05.svg') }}"><img src="{{ asset('sboza2/img/icons/Icono 2-04.svg') }}"></span>
             {% include ':desktop:_social_networks.html.twig' %}
         </div>
     </div>
