--- a/app/Resources/views/desktop/_slide_show.html.twig
+++ b/app/Resources/views/desktop/_slide_show.html.twig
@@ -1,5 +1,5 @@
 <div class="slide_show">
-    <div class="wrapper-content">
+    <div class="wrapper-content-slide">
         <ul class="bxslider">
             <li><img src="{{ asset('sboza2/img/slide-show/Banner-1.png') }}" /></li>
             <li><img src="{{ asset('sboza2/img/slide-show/Banner-2.png') }}" /></li>
