--- a/app/Resources/views/desktop/index.html.twig
+++ b/app/Resources/views/desktop/index.html.twig
@@ -4,7 +4,9 @@
     <div class="content">
         {% include ':desktop:_slide_show.html.twig' %}
         <div class="wrapper-content">
-
+            <div class="text-contact-now">
+                <a class="contact-now" href="tel:+34669970256">Contactar ahora</a><img src="{{ asset('sboza2/img/icons/Icono 2-02.svg') }}"><img src="{{ asset('sboza2/img/icons/Icono 2-06.svg') }}">
+            </div>
             {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
 
         </div>
