--- a/app/Resources/css/480.less
+++ b/app/Resources/css/480.less
@@ -1,7 +1,7 @@
 @media only screen and (max-width: 480px) {
 
   .header-top-mobile{
-    padding-top: 57px;
+    text-align: center;
     .header-top-content{
       padding-right: 10px;
     }
