--- a/app/Resources/css/600.less
+++ b/app/Resources/css/600.less
@@ -85,16 +85,6 @@
 
   .content {
     .content-form {
-      .footer-form{
-        ul{
-          .icon{
-            width: 9%;
-          }
-          .text{
-            width: 88%;
-          }
-        }
-      }
       .form {
         .wrapper-form {
           width: 100%;
@@ -122,7 +112,7 @@
       width: 100%;
       padding: 0;
     }
-    .phone-footer{
+    .text-contact-now{
       width: 100%;
       text-align: center;
       padding-top: 20px;
