--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -12,10 +12,11 @@
         <link href="{{ asset('sboza2/css/font-awesome.min.css') }}" rel="stylesheet" />
         <link href="{{ asset('sboza2/css/styles.css') }}" rel="stylesheet" />
         <link href="{{ asset('sboza2/css/responsive.css') }}" rel="stylesheet" />
+        <link href="{{ asset('sboza2/css/jquery.bxslider.min.css') }}" rel="stylesheet" />
         <script src="{{ asset('sboza2/js/jquery-3.1.0.min.js') }}"></script>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
         <script src="{{ asset('sboza2/js/jquery.bxslider.min.js') }}"></script>
-        <link href="{{ asset('sboza2/css/jquery.bxslider.min.css') }}"/>
+
 
     </head>
     <body>
@@ -29,7 +30,9 @@
         {% block javascripts %}
             <script>
                 $(document).ready(function(){
-                    $('.bxslider').bxSlider();
+                    $('.bxslider').bxSlider({
+                        pager: false
+                    })
                 });
             </script>
             <script>
