--- a/app/Resources/views/desktop/_contactHome.html.twig
+++ b/app/Resources/views/desktop/_contactHome.html.twig
@@ -5,22 +5,21 @@
     <div class="form">
         <div class="wrapper-form">
             <div class="text-form">
-                <h2>Contacto</h2>
                 <h3 class="text-title-form">UNA ATENCIÓN PERSONALIZADA</h3>
                 <p>Si deseas recibir más información sobre un área específica de nuestra formación
                     puedes ponerte en contacto con nosotros a través del siguiente formulario.</p>
             </div>
+        </div>
+        <div class="header-form">
+            <div class="wrapper-header-form">
+                <div class="element-first"><p class="icon"><img src="{{ asset('sboza2/img/icons/Icono 2-01.svg') }}"></p> <p class="text">Horario de atención<br/>De Lunes a Viernes, de 10:00 a 14:00 y de 16:00 a 22:00 h.</p> </div>
+                <div class="element-second"><p class="icon"><img src="{{ asset('sboza2/img/icons/Icono 2-02.svg') }}"></p> <p class="text"><a href="tel:+34858128386">858 128 386</a> - <a href="tel:+34669970256">669 970 256</a></p></div>
+            </div>
+        </div>
+        <div class="wrapper-form">
             {{ form_start(form ,{'action':'', 'method':'POST'}) }}
             {{ form_widget(form) }}
             {{ form_end(form) }}
-
-            <div class="footer-form">
-                <ul>
-                    <li><p class="icon"><img src="{{ asset('sboza2/img/icons/Icono 2-01.svg') }}"></p> <p class="text">Horario de atención<br/>De Lunes a Viernes, de 10:00 a 14:00 y de 16:00 a 22:00 h.</p> </li>
-                    <li><p class="icon"><img src="{{ asset('sboza2/img/icons/Icono 2-02.svg') }}"></p> <p class="text"><a href="tel:+34858128386">858 128 386</a> - <a href="tel:+34669970256">669 970 256</a></p></li>
-                    <li><p class="icon"><img src="{{ asset('sboza2/img/icons/Icono 2-03.svg') }}"></p> <p class="text">Camino de ronda, 204, granada<br>parada de metropolitano villarejo,(situada a 200 metros)</p></li>
-                </ul>
-            </div>
 
         </div>
     </div>
