--- a/app/Resources/views/desktop/_footer.html.twig
+++ b/app/Resources/views/desktop/_footer.html.twig
@@ -1,4 +1,3 @@
-<div>
 <footer class="footer">
     <div class="wrapper-content">
         <div class="logo-footer">
@@ -11,9 +10,8 @@
                 parada de metropolitano villarejo,(situada a 200 metros)<br>
                 <a href="mailto:info@sboza2.com"> <strong>info@sboza2.com</strong></a></p>
             </div>
-            <div class="phone-footer">
-                <p> <img src="{{ asset('sboza2/img/icons/Icono-2-05.png') }}"><img src="{{ asset('sboza2/img/icons/Icono 2-04.svg') }}"> P&iacute;denos información:<br><a href="tel:+34669970256"><span class="phone">669 970 256</span></a></p>
-
+            <div class="text-contact-now">
+                <a class="contact-now" href="tel:+34669970256">Contactar ahora</a><img src="{{ asset('sboza2/img/icons/Icono 2-05.svg') }}"><img src="{{ asset('sboza2/img/icons/Icono 2-04.svg') }}">
             </div>
         </div>
         <div class="copyright">
@@ -21,4 +19,3 @@
         </div>
     </div>
 </footer>
-</div>
