--- a/app/Resources/views/desktop/_header.html.twig
+++ b/app/Resources/views/desktop/_header.html.twig
@@ -20,7 +20,7 @@
 'Sunday'   : 'Domingo'
 }) %}
 
-<div class="hamburgler-menu">
+{#<div class="hamburgler-menu">
     <ul class="hamburgler-menu-list">
         <li>never</li>
         <li>gonna</li>
@@ -32,7 +32,7 @@
 
 <div id="hamburgler" class="hamburgler-icon-wrapper">
     <span class="hamburgler-icon"></span>
-</div>
+</div>#}
 
 <header>
     {% include ':desktop:_header_top.html.twig' %}
@@ -44,7 +44,7 @@
     </div>
     <div class="box_phone_mobile">
         <div class="wrapper-content">
-            <img src="{{ asset('sboza2/img/icons/Icono-2-05.png') }}"><img src="{{ asset('sboza2/img/icons/Icono 2-04.svg') }}"> pidenos más informaci&oacute;n <a href="tel:+34669970256"><span class="phone">669 970 256</span></a>
+            pidenos más informaci&oacute;n <a href="tel:+34669970256"><span class="phone">669 970 256</span></a>
         </div>
     </div>
     <div class="box_date_mobile">
@@ -57,7 +57,7 @@
             <div class="logo">
                 <a href="{{ path('homepage') }}" ><img src="{{ asset('sboza2/img/logo.svg') }}"></a>
             </div>
-            <nav>
+            {#<nav>
                 <ul>
                     <li><a href="#">Sección 1</a></li>
                     <li><a href="#">Sección 2</a></li>
@@ -65,7 +65,7 @@
                     <li><a href="#">Sección 4</a></li>
                     <li><a href="#">Sección 5</a></li>
                 </ul>
-            </nav>
+            </nav>#}
         </div>
     </div>
 </header>
