--- a/app/Resources/css/320.less
+++ b/app/Resources/css/320.less
@@ -7,6 +7,17 @@
     }
   }
 
+  .box_phone_mobile{
+    font-size: 16px;
+    .phone{
+      font-size: 18px;
+    }
+  }
+
+  .box_email_mobile{
+    font-size: 16px;
+  }
+
   .content {
     .content-form {
       .form {
@@ -14,6 +25,23 @@
           .wrapper-header-form {
             width: 100%;
             max-width: 322px;
+            .element-first {
+              .icon{
+                width: 12%;
+              }
+              .text{
+                width: 86%;
+              }
+            }
+            .element-second {
+              .icon{
+                width: 12%;
+              }
+              .text{
+                width: 86%;
+              }
+            }
+
           }
         }
         .wrapper-form {
