--- a/app/Resources/css/responsive.css
+++ b/app/Resources/css/responsive.css
@@ -1,284 +1,1 @@
-@media only screen and (max-width: 1023px) {
-  .wrapper-content {
-    max-width: 100% !important;
-    overflow-x: hidden !important;
-  }
-  .wrapper-content-slide {
-    max-width: 100% !important;
-    overflow-x: hidden !important;
-  }
-  .header-top {
-    height: 100%;
-  }
-  .header-top .info-header {
-    width: 100%;
-    text-align: center;
-    margin-bottom: 11px;
-    font-size: 18px;
-  }
-  .header-top .info-header .phone {
-    font-size: 22px;
-  }
-  .header-top .social-header {
-    width: 100%;
-    text-align: center;
-    font-size: 18px;
-  }
-}
-/*
-@media only screen and (min-width: 1300px) {
-
-  .footer{
-    background: url('../img/bg-footer.png') repeat;
-    height: 600px;
-
-  }
-}*/
-@media only screen and (max-width: 960px) {
-  .header nav {
-    display: none;
-  }
-  .hamburgler-menu {
-    display: block;
-  }
-  .hamburgler-menu-list {
-    display: block;
-  }
-  .hamburgler-icon-wrapper {
-    position: absolute;
-    top: 1em;
-    left: 1em;
-    height: 26px;
-    width: 26px;
-    cursor: pointer;
-  }
-  .hamburgler-icon,
-  .hamburgler-icon:before,
-  .hamburgler-icon:after {
-    content: '';
-    position: absolute;
-    border-radius: 1em;
-    height: 2px;
-    width: 26px;
-    background: black;
-    transition: all 0.2s ease;
-  }
-  .hamburgler-icon {
-    top: 0.75em;
-  }
-  .hamburgler-icon:before {
-    top: -0.55em;
-  }
-  .hamburgler-icon:after {
-    top: 0.55em;
-  }
-  .hamburgler-active .hamburgler-icon {
-    background: transparent;
-    transform: rotate(-135deg);
-  }
-  .hamburgler-active .hamburgler-icon:before,
-  .hamburgler-active .hamburgler-icon:after {
-    top: 0;
-  }
-  .hamburgler-active .hamburgler-icon:before {
-    transform: rotate(90deg);
-  }
-  .hamburgler-active .hamburgler-icon,
-  .hamburgler-active .hamburgler-icon:before,
-  .hamburgler-active .hamburgler-icon:after {
-    background: #ffffff;
-  }
-  .hamburgler-menu {
-    transition: all 0.4s ease;
-    opacity: 0;
-    pointer-events: none;
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, 0.9);
-    color: white;
-    text-align: center;
-  }
-  .hamburgler-active .hamburgler-menu {
-    opacity: 1;
-    pointer-events: initial;
-    max-height: 100%;
-  }
-  .hamburgler-menu-list {
-    display: block;
-    transition: all 0.4s ease;
-    padding: 0;
-    list-style-type: none;
-    position: absolute;
-    top: 148px;
-    left: 50%;
-    transform: translate(-50%, -50%) scale(1.2);
-    border-top: 1px solid;
-    border-bottom: 1px solid;
-    font-size: 23px;
-    width: 100%;
-  }
-  .hamburgler-menu-list li {
-    max-width: 100%;
-    display: block;
-    height: 31px;
-    border-bottom: 1px solid;
-  }
-  .hamburgler-active .hamburgler-menu-list {
-    transform: translate(-50%, -50%) scale(1);
-  }
-}
-@media only screen and (max-width: 800px) {
-  .content .content-form .form .header-form .wrapper-header-form {
-    width: 100%;
-    max-width: 400px;
-  }
-  .content .content-form .form .header-form .wrapper-header-form .element-first {
-    display: block;
-    width: 100%;
-    padding-bottom: 10px;
-  }
-  .content .content-form .form .header-form .wrapper-header-form .element-first .icon {
-    width: 9%;
-  }
-  .content .content-form .form .header-form .wrapper-header-form .element-first .text {
-    width: 89%;
-  }
-  .content .content-form .form .header-form .wrapper-header-form .element-second {
-    display: block;
-    width: 100%;
-  }
-  .content .content-form .form .header-form .wrapper-header-form .element-second .icon {
-    width: 9%;
-  }
-  .content .content-form .form .header-form .wrapper-header-form .element-second .text {
-    width: 89%;
-  }
-}
-@media only screen and (max-width: 660px) {
-  .header-top-mobile {
-    display: block;
-    width: 100%;
-    background: #cccccc;
-    height: 100%;
-    text-align: right;
-    padding-top: 14px;
-  }
-  .header-top-mobile i {
-    font-size: 26px;
-  }
-  .header-top-mobile a {
-    text-decoration: none;
-    color: #000000;
-    font-size: 26px;
-  }
-  .header-top-mobile .header-top-content {
-    padding-right: 21px;
-  }
-  .header-top-mobile .social-networks {
-    display: inline-block;
-    vertical-align: middle;
-  }
-  .header-top-mobile .social-networks img {
-    width: 26px;
-    height: 26px;
-  }
-  .box_phone_mobile {
-    background: #cccccc;
-    font-size: 26px;
-    height: 100%;
-  }
-  .box_phone_mobile a {
-    text-decoration: none;
-    color: #000000;
-    text-align: right;
-  }
-  .box_phone_mobile img {
-    width: 26px;
-    height: 26px;
-  }
-  .box_email_mobile {
-    background: #cccccc;
-    font-size: 26px;
-    height: 100%;
-  }
-  .box_email_mobile a {
-    text-decoration: none;
-    color: #000000;
-    text-align: right;
-  }
-  .box_date_mobile {
-    background: #cccccc;
-    font-size: 26px;
-    height: 100%;
-  }
-  .box_date_mobile a {
-    text-decoration: none;
-    color: #000000;
-    text-align: right;
-  }
-  .box_phone_mobile {
-    background: #cccccc;
-    font-size: 26px;
-    height: 100%;
-  }
-  .box_phone_mobile a {
-    text-decoration: none;
-    color: #000000;
-    text-align: right;
-  }
-  .header-top {
-    display: none;
-  }
-  .content .content-form .form .wrapper-form {
-    width: 100%;
-    max-width: 380px;
-  }
-  .content .content-form .form .wrapper-form .form-fields .field {
-    width: 100%;
-  }
-  .content .content-form .form .wrapper-form .form-fields .label {
-    width: 100%;
-  }
-  .footer {
-    text-align: center;
-  }
-  .footer .logo-footer {
-    width: 100%;
-  }
-  .footer .address-footer {
-    width: 100%;
-    padding: 0;
-  }
-  .footer .text-contact-now {
-    width: 100%;
-    text-align: center;
-    padding-top: 20px;
-  }
-}
-@media only screen and (max-width: 480px) {
-  .header-top-mobile {
-    text-align: center;
-  }
-  .header-top-mobile .header-top-content {
-    padding-right: 10px;
-  }
-}
-@media only screen and (max-width: 375px) {
-  .header-top-mobile {
-    text-align: center;
-  }
-  .header-top-mobile .header-top-content {
-    padding-right: 0;
-  }
-  .content .content-form .form .header-form .wrapper-header-form {
-    width: 100%;
-    max-width: 322px;
-  }
-  .content .content-form .form .wrapper-form {
-    width: 100%;
-    max-width: 300px;
-  }
-}
+@media only screen and (max-width:1023px){.wrapper-content{max-width:100%!important;overflow-x:hidden!important}.wrapper-content-slide{max-width:100%!important;overflow-x:hidden!important}.header-top{height:100%}.header-top .info-header{width:100%;text-align:center;margin-bottom:11px;font-size:18px}.header-top .info-header .phone{font-size:22px}.header-top .social-header{width:100%;text-align:center;font-size:18px}}@media only screen and (max-width:960px){.header nav{display:none}.header .logo{width:100%;text-align:center}.hamburgler-menu{display:block}.hamburgler-menu-list{display:block}.hamburgler-icon-wrapper{position:absolute;top:1em;left:1em;height:26px;width:26px;cursor:pointer}.hamburgler-icon,.hamburgler-icon:before,.hamburgler-icon:after{content:'';position:absolute;border-radius:1em;height:2px;width:26px;background:black;transition:all .2s ease}.hamburgler-icon{top:.75em}.hamburgler-icon:before{top:-0.55em}.hamburgler-icon:after{top:.55em}.hamburgler-active .hamburgler-icon{background:transparent;transform:rotate(-135deg)}.hamburgler-active .hamburgler-icon:before,.hamburgler-active .hamburgler-icon:after{top:0}.hamburgler-active .hamburgler-icon:before{transform:rotate(90deg)}.hamburgler-active .hamburgler-icon,.hamburgler-active .hamburgler-icon:before,.hamburgler-active .hamburgler-icon:after{background:#fff}.hamburgler-menu{transition:all .4s ease;opacity:0;pointer-events:none;position:absolute;top:0;right:0;bottom:0;left:0;background-color:rgba(0,0,0,0.9);color:white;text-align:center}.hamburgler-active .hamburgler-menu{opacity:1;pointer-events:initial;max-height:100%}.hamburgler-menu-list{display:block;transition:all .4s ease;padding:0;list-style-type:none;position:absolute;top:148px;left:50%;transform:translate(-50%,-50%) scale(1.2);border-top:1px solid;border-bottom:1px solid;font-size:23px;width:100%}.hamburgler-menu-list li{max-width:100%;display:block;height:31px;border-bottom:1px solid}.hamburgler-active .hamburgler-menu-list{transform:translate(-50%,-50%) scale(1)}.footer{text-align:center}.footer .logo-footer{width:100%}.footer .address-footer{width:100%;padding:0}.footer .text-contact-now{width:100%;text-align:center;padding-top:20px}}@media only screen and (max-width:800px){.content .content-form .form .header-form .wrapper-header-form{width:100%;max-width:400px}.content .content-form .form .header-form .wrapper-header-form .element-first{display:block;width:100%;padding-bottom:10px}.content .content-form .form .header-form .wrapper-header-form .element-first .icon{width:9%}.content .content-form .form .header-form .wrapper-header-form .element-first .text{width:89%}.content .content-form .form .header-form .wrapper-header-form .element-second{display:block;width:100%}.content .content-form .form .header-form .wrapper-header-form .element-second .icon{width:9%}.content .content-form .form .header-form .wrapper-header-form .element-second .text{width:89%}}@media only screen and (max-width:660px){.header-top-mobile{display:block;width:100%;background:#ccc;height:100%;text-align:right;padding-top:14px}.header-top-mobile i{font-size:26px;vertical-align:top}.header-top-mobile img{width:26px}.header-top-mobile a{text-decoration:none;color:#000;font-size:26px}.header-top-mobile .header-top-content{padding-right:21px}.header-top-mobile .social-networks{display:inline-block;vertical-align:middle}.header-top-mobile .social-networks img{width:26px}.header-top-mobile .social-networks .text-contact-now{display:none}.box_phone_mobile{background:#ccc;font-size:18px;font-weight:bold;height:100%;text-align:center}.box_phone_mobile a{text-decoration:none;color:#000;text-align:right}.box_phone_mobile .phone{color:#aa198d;font-size:20px}.box_email_mobile{background:#ccc;font-size:18px;height:100%;text-align:center;font-weight:bold}.box_email_mobile a{text-decoration:none;color:#000;text-align:right}.header-top{display:none}.content .content-form .form .wrapper-form{width:100%;max-width:380px}.content .content-form .form .wrapper-form .form-fields .field{width:100%}.content .content-form .form .wrapper-form .form-fields .label{width:100%}}@media only screen and (max-width:480px){.header-top-mobile{text-align:center}.header-top-mobile .header-top-content{padding-right:10px}}@media only screen and (max-width:375px){.header-top-mobile{text-align:center}.header-top-mobile .header-top-content{padding-right:0}.box_phone_mobile{font-size:16px}.box_phone_mobile .phone{font-size:18px}.box_email_mobile{font-size:16px}.content .content-form .form .header-form .wrapper-header-form{width:100%;max-width:322px}.content .content-form .form .header-form .wrapper-header-form .element-first .icon{width:12%}.content .content-form .form .header-form .wrapper-header-form .element-first .text{width:86%}.content .content-form .form .header-form .wrapper-header-form .element-second .icon{width:12%}.content .content-form .form .header-form .wrapper-header-form .element-second .text{width:86%}.content .content-form .form .wrapper-form{width:100%;max-width:300px}}
