--- a/app/Resources/views/desktop/_footer.html.twig
+++ b/app/Resources/views/desktop/_footer.html.twig
@@ -11,7 +11,7 @@
                 <a href="mailto:info@sboza2.com"> <strong>info@sboza2.com</strong></a></p>
             </div>
             <div class="text-contact-now">
-                <a class="contact-now" href="tel:+34669970256">Contactar ahora</a><img src="{{ asset('sboza2/img/icons/Icono 2-05.svg') }}"><img src="{{ asset('sboza2/img/icons/Icono 2-04.svg') }}">
+                <a class="contact-now" href="tel:+34669970256">Contactar ahora</a><a href="tel:+34669970256"><img src="{{ asset('sboza2/img/icons/Icono 2-05.svg') }}"></a><a id="link-whatsapp-footer"><img src="{{ asset('sboza2/img/icons/Icono 2-04.svg') }}"></a>
             </div>
         </div>
         <div class="copyright">
