--- a/app/Resources/css/600.less
+++ b/app/Resources/css/600.less
@@ -1,4 +1,5 @@
 @media only screen and (max-width: 660px) {
+
   .header-top-mobile{
     display: block;
     width: 100%;
@@ -9,6 +10,11 @@
 
     i{
       font-size: 26px;
+      vertical-align: top;
+    }
+
+    img{
+      width: 26px;
     }
 
     a{
@@ -25,53 +31,36 @@
       vertical-align: middle;
       img{
         width: 26px;
-        height: 26px;
+      }
+      .text-contact-now{
+        display: none;
       }
     }
   }
 
   .box_phone_mobile{
     background: #cccccc;
-    font-size: 26px;
+    font-size: 18px;
+    font-weight: bold;
     height: 100%;
+    text-align: center;
     a{
       text-decoration: none;
       color: #000000;
       text-align: right;
     }
-    img{
-      width: 26px;
-      height: 26px;
+    .phone{
+      color: #aa198d;
+      font-size: 20px;
     }
   }
 
   .box_email_mobile{
     background: #cccccc;
-    font-size: 26px;
+    font-size: 18px;
     height: 100%;
-    a{
-      text-decoration: none;
-      color: #000000;
-      text-align: right;
-    }
-  }
-
-  .box_date_mobile{
-    background: #cccccc;
-    font-size: 26px;
-    height: 100%;
-    a{
-      text-decoration: none;
-      color: #000000;
-      text-align: right;
-    }
-  }
-
-
-  .box_phone_mobile{
-    background: #cccccc;
-    font-size: 26px;
-    height: 100%;
+    text-align: center;
+    font-weight: bold;
     a{
       text-decoration: none;
       color: #000000;
@@ -101,22 +90,5 @@
         }
       }
     }
-  }
-
-  .footer{
-    text-align: center;
-    .logo-footer{
-      width: 100%;
-    }
-    .address-footer{
-      width: 100%;
-      padding: 0;
-    }
-    .text-contact-now{
-      width: 100%;
-      text-align: center;
-      padding-top: 20px;
-    }
-
   }
 }
