--- a/app/Resources/css/960.less
+++ b/app/Resources/css/960.less
@@ -1,7 +1,12 @@
 @media only screen and (max-width: 960px) {
+
   .header{
     nav{
       display: none;
+    }
+    .logo{
+      width: 100%;
+      text-align: center;
     }
   }
 
@@ -108,6 +113,23 @@
 
   .hamburgler-active .hamburgler-menu-list {
     transform: translate(-50%, -50%) scale(1)
+  }
+
+  .footer{
+    text-align: center;
+    .logo-footer{
+      width: 100%;
+    }
+    .address-footer{
+      width: 100%;
+      padding: 0;
+    }
+    .text-contact-now{
+      width: 100%;
+      text-align: center;
+      padding-top: 20px;
+    }
+
   }
 
 }
