--- a/app/Resources/views/desktop/index.html.twig
+++ b/app/Resources/views/desktop/index.html.twig
@@ -5,7 +5,7 @@
         {% include ':desktop:_slide_show.html.twig' %}
         <div class="wrapper-content">
             <div class="text-contact-now">
-                <a class="contact-now" href="tel:+34669970256">Contactar ahora</a><img src="{{ asset('sboza2/img/icons/Icono 2-02.svg') }}"><img src="{{ asset('sboza2/img/icons/Icono 2-06.svg') }}">
+                <a class="contact-now" href="tel:+34669970256">Contactar ahora</a><a href="tel:+34669970256"><img src="{{ asset('sboza2/img/icons/Icono 2-02.svg') }}"></a><a id="link-whatsapp"><img src="{{ asset('sboza2/img/icons/Icono 2-06.svg') }}"></a>
             </div>
             {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
 
