finish base web

--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -204,14 +204,151 @@ body{
     color: #000000;
     #text{
       text-align: center;
+      h2{
+        text-transform: uppercase;
+        letter-spacing: 11px;
+        font-size: 18px;
+        padding-bottom: 28px;
+        color: #aaa;
+      }
       h3{
         font-family: "Bebas Neue", arial, sans-serif;
-        font-size: 53px;
+        font-size: 49px;
+      }
+      #first-paragraph{
+        padding: 0 33px 23px;
+        font-size: 17px;
+        letter-spacing: 0.5px;
+      }
+      #second-paragraph{
+        padding: 0 27px 50px;
+        font-size: 17px;
       }
     }
     #list{
-      width: 500px;
+      width: 675px;
       margin: 0 auto;
+      h3{
+        font-family: "Bebas Neue", arial, sans-serif;
+        text-align: center;
+        text-transform: uppercase;
+        font-size: 36px;
+        letter-spacing: 1px;
+        color: #aa198d;
+        padding-bottom: 12px;
+      }
+      ul{
+        font-size: 20px;
+        list-style-image: url("../img/green_cube.png");
+        li{
+          padding-bottom: 19px;
+        }
+      }
+    }
+  }
+
+  .title-section{
+    text-transform: uppercase;
+    letter-spacing: 11px;
+    font-size: 18px;
+    padding-bottom: 28px;
+    color: #aaa;
+    text-align: center;
+    padding-top: 60px;
+  }
+
+  .our_cursos{
+    color: #000000;
+
+    #spacing{
+      width: 1%;
+      display: inline-block;
+    }
+
+    .element-pink{
+      width: 24%;
+      display: inline-block;
+      vertical-align: top;
+      background: #aa198d;
+      height: 532px;
+      font-size: 13px;
+      font-weight: bold;
+      ul{
+        list-style: none;
+        text-align: center;
+        color: #ffffff;
+        li{
+          padding-bottom: 12px;
+        }
+
+      }
+    }
+
+    .element-green{
+      width: 23%;
+      display: inline-block;
+      vertical-align: top;
+      background: #80cc28;
+      height: 532px;
+      font-size: 13px;
+      font-weight: bold;
+      ul{
+        list-style: none;
+        text-align: center;
+        color: #ffffff;
+        li{
+          padding-bottom: 12px;
+        }
+      }
+    }
+  }
+
+  .team{
+    .team-detail{
+      padding-left: 80px;
+      padding-right: 80px;
+      text-align: center;
+      .title-team{
+        font-family: "Bebas Neue", arial, sans-serif;
+        font-size: 40px;
+        color:#000000;
+      }
+      .team-person {
+        height: 131px;
+        width: 24%;
+        display: inline-block;
+        text-align: center;
+        p{
+          color: #80cc28;
+        }
+        img{
+          background-repeat: no-repeat;
+          background-position: 50%;
+          border-radius: 50%;
+          background-size: 100% auto;
+        }
+
+      }
+    }
+  }
+
+  .news{
+    color: #000000;
+    .new{
+      .img-new{
+        width: 40%;
+        display: inline-block;
+        img{
+          width: 350px;
+          height: 350px;
+          background: #000000;
+        }
+      }
+      .text-new{
+        width: 59%;
+        display: inline-block;
+        vertical-align: top;
+      }
     }
   }
 
@@ -259,6 +396,8 @@ body{
             color: #999999;
             letter-spacing: 10px;
             text-transform: uppercase;
+            padding-top: 43px;
+            padding-bottom: 30px;
           }
           .text-title-form{
             font-family: "Bebas Neue", arial, sans-serif;
