--- a/app/Resources/views/desktop/_our_center.html.twig
+++ b/app/Resources/views/desktop/_our_center.html.twig
@@ -1,15 +1,15 @@
 <div class="our_center">
     <div id="text">
-        <h2>N U E S T R O  C E N T R O</h2>
+        <h2>Nuestro centro</h2>
         <h3>
             Mas de 10 años sacando lo mejor de tu vocación
         </h3>
-        <p>
+        <p id="first-paragraph">
             <strong>Elegir dónde y cómo comienza tu futuro es una de las decisiones más importantes de tu vida. En Escuela sboza2 tenemos
             tres de los requisitos indispensables para que aciertes de lleno: un programa formativo inigualable, un equipo docente
             seleccionado de entre los mejores y, sobre todo, años de grandes resultados.</strong>
         </p>
-        <p>
+        <p id="second-paragraph">
             sboza2 es una escuela de arte, con centros en Jaén y Granada. Su objetivo es ofrecer la mejor formación en profesiones artísticas a
             estudiantes interesados, proporcionándoles los mejores medios para formarse en áreas como animación 3D, diseño gráfico, cómic,
             ilustración tradicional, arte digital, creación de videojuegos, fotografía, etc.
@@ -19,53 +19,53 @@
         <h3>MOTIVOS PARA ELEGIR sboza2</h3>
         <ul>
             <li>
-                Equipo de formadores de reconocido recorrido profesional y experta capacidad docente, especializados en 3D, Ilustración,
+                <strong>Equipo de formadores</strong> de reconocido recorrido profesional y experta capacidad docente, especializados en 3D, Ilustración,
                 Videojuegos, Diseño Gráfico, Animación, etc.
             </li>
             <li>
-                Relación calidad-precio incuestionable y ventajosa para nuestr@s
+                Relación <strong>calidad-precio incuestionable</strong> y ventajosa para nuestr@s
                 alumn@s.
             </li>
             <li>
-                Financiación de los cursos sin ningún cargo añadido.
+                <strong>Financiación</strong> de los cursos <strong>sin ningún cargo</strong> añadido.
             </li>
             <li>
-                Intermediación y búsqueda activa de empleo para nuestr@s alumn@s.
+                Intermediación y <strong>búsqueda activa de empleo</strong> para nuestr@s alumn@s.
                 Publicación de ofertas en nuestra Web.
             </li>
             <li>
-                Contactos con empresas para trabajos en prácticas.
+                Contactos con empresas para <strong>trabajos en prácticas</strong>.
             </li>
             <li>
-                Grupos reducidos de máximo 14 alumn@s por clase para garantizar el
+                <strong>Grupos reducidos</strong> de máximo 14 alumn@s por clase para garantizar el
                 seguimiento individual.
             </li>
             <li>
-                Portfolio público de ARTENEO, donde se pueden ver los resultados de
+                <strong>Portfolio</strong> público de ARTENEO, donde se pueden ver los resultados de
                 nuestr@ alumn@s año tras año..
             </li>
             <li>
-                Posibilidad de asistir a una Clase Demo, ocasión de probar antes de
+                Posibilidad de asistir a una <strong>Clase Demo</strong>, ocasión de probar antes de
                 elegir, sin ningún compromiso.
             </li>
             <li>
-                Organización periódica de Talleres y Masterclasses, gratuitos para l@s
+                Organización periódica de <strong>Talleres y Masterclasses, gratuitos</strong> para l@s
                 alumn@s de ARTENEO.
             </li>
             <li>
-                Calendario lectivo oficial con recuperación de clase en caso de incidencia
+                <strong>Calendario lectivo</strong> oficial con recuperación de clase en caso de incidencia
                 responsabilidad de la Escuela.
             </li>
             <li>
-                Control de calidad permanente a través de encuestas realizadas a l@s
+                <strong>Control de calidad permanente</strong> a través de encuestas realizadas a l@s
                 alumn@s tanto presenciales como online.
             </li>
             <li>
-                Todo el material necesario para el trabajo individual de l@s estudiantes
-                está incluido.
+                Todo el <strong>material</strong> necesario para el trabajo individual de l@s estudiantes
+                está <strong>incluido</strong>.
             </li>
             <li>
-                Cursos Intensivos de verano como complemento adicional a la formación
+                Cursos <strong>Intensivos de verano</strong> como complemento adicional a la formación
                 o como ocasión para confirmar tu vocación profesional.
             </li>
         </ul>
