--- a/app/Resources/views/desktop/index.html.twig
+++ b/app/Resources/views/desktop/index.html.twig
@@ -5,7 +5,9 @@
         <div class="wrapper-content">
             {% include ':desktop:_slider_show.html.twig' %}
             {% include ':desktop:_our_center.html.twig' %}
-
+            {% include ':desktop:_our_cursos.html.twig' %}
+            {% include ':desktop:_team.html.twig' %}
+            {% include ':desktop:_news_home.html.twig' %}
         </div>
         {% include ':desktop:_contactHome.html.twig' with { 'form' : form } %}
     </div>
