--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -6,6 +6,7 @@ body{
   margin: 0 auto;
   font-family: "HelveticaNeueLTStd Lt", arial, sans-serif;
   overflow-x: hidden !important;
+  background: #80cc28;
 }
 
 
@@ -115,6 +116,7 @@ body{
 .header{
   width: 100%;
   margin: 0 auto;
+  background: #fff;
   .logo{
     width: 20%;
     display: inline-block;
@@ -132,11 +134,12 @@ body{
     margin: 0 auto;
     width: 100%;
     height: 40px;
+    float: right;
+    text-align: right;
   }
 
   nav li {
     display: inline;
-    float: left;
   }
 
   nav a {
@@ -144,11 +147,11 @@ body{
     width: 100px;
     text-align: center;
     text-decoration: none;
-    color: #ffffff;
+    color: #000000;
   }
 
   nav li a {
-    border-right: 1px solid #ffffff;
+    border-right: 1px solid #000000;
   }
 
   nav li:last-child a {
@@ -162,6 +165,7 @@ body{
 
 .content{
   color: #fff;
+  background: #fff;
   .info-thank{
     text-align: center;
     font-family: "Bebas Neue", arial, sans-serif;
