--- a/app/Resources/views/desktop/_header.html.twig
+++ b/app/Resources/views/desktop/_header.html.twig
@@ -59,7 +59,7 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="#">Sección 1</a></li>
+                    <li><a href="#our_center" >Sección 1</a></li>
                     <li><a href="#">Sección 2</a></li>
                     <li><a href="#">Sección 3</a></li>
                     <li><a href="#">Sección 4</a></li>
