--- a/app/Resources/css/styles.less
+++ b/app/Resources/css/styles.less
@@ -312,13 +312,15 @@ body{
       padding-left: 80px;
       padding-right: 80px;
       text-align: center;
+      padding-bottom: 10px;
       .title-team{
         font-family: "Bebas Neue", arial, sans-serif;
         font-size: 40px;
         color:#000000;
+        padding-bottom: 12px;
       }
       .team-person {
-        height: 131px;
+        height: 229px;
         width: 24%;
         display: inline-block;
         text-align: center;
